--- a/index.html
+++ b/index.html
@@ -210,6 +210,9 @@
                         <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="9" aria-label="Slide 10"></button>
                         <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="10" aria-label="Slide 11"></button>
                         <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="11" aria-label="Slide 12"></button>
+                        <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="12" aria-label="Slide 13"></button>
+                        <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="13" aria-label="Slide 14"></button>
+                        <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="14" aria-label="Slide 15"></button>
                     </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -280,7 +283,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./assets/Optimisez_le_referencement_SEO_en_ameliorant_ses_performances_techniques.PNG" class="d-block w-100" alt="Mon diplôme Optimisez le referencement SEO en ameliorant ses performances techniques">
+                                <img src="./assets/Optimisez_le_referencement_SEO_en_ameliorant_ses_performances_techniques.jpg" class="d-block w-100" alt="Mon diplôme Optimisez le referencement SEO en ameliorant ses performances techniques">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>2022</h5>
                                     <span class="bi-award-fill"></span>
@@ -343,6 +346,39 @@
                                     <div class="line-education"></div>
                                       <h4> Certificat de réussite</h4>
                                     <p>Passez au Full Stack avec Node.js, Express et MongoDB</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./assets/Initiez_vous_au_Design_Thinking.jpg" class="d-block w-100" alt="Mon diplôme Initiez_vous_au_Design_Thinking">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>2022</h5>
+                                    <span class="bi-award-fill"></span>
+                                    <h3>OpenClassRooms</h3>
+                                    <div class="line-education"></div>
+                                      <h4> Certificat de réussite</h4>
+                                    <p>Initiez vous au Design Thinking</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./assets/Gestion_de_projet_Agile.jpg" class="d-block w-100" alt="Mon diplôme Initiez-vous à la Gestion de projet Agile">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>2023</h5>
+                                    <span class="bi-award-fill"></span>
+                                    <h3>OpenClassRooms</h3>
+                                    <div class="line-education"></div>
+                                      <h4> Certificat de réussite</h4>
+                                    <p>Initiez-vous à la Gestion de projet Agile</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./assets/Appropriez_vous_la_démarche_UX_en_pratique.jpg" class="d-block w-100" alt="Mon diplôme Appropriez-vous la démarche UX en pratique">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>2022</h5>
+                                    <span class="bi-award-fill"></span>
+                                    <h3>OpenClassRooms</h3>
+                                    <div class="line-education"></div>
+                                      <h4> Certificat de réussite</h4>
+                                    <p>Appropriez-vous la démarche UX en pratique</p>
                                 </div>
                             </div>
                         </div>
